Opened 18 years ago
Closed 17 years ago
#1028 closed bug (fixed)
Find crashes tracker when editing query
Reported by: | cebif | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Tracker | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
Click on the middle box in find to choose attribute. I type the name contains into the contains box then click the search button. After the list of files appear in tracker, I click on File/Edit Query. A crash occurs. Expected results should be show the find window to change the word or words typed, file type etc. If I leave it at the default "by name" instaed of "by attribute" then type my search word Click search After the list of found files comes up in the tracker Click on File/Edit Query There is no crash in this case. The crash only seems to occur when searching by attribute. After the crash all the icons on the desktop have gone but the deskbar is still showing. I have to "ctrl alt delete" and click restart desktop for them to reapear. This is reproduceable every time. I was testing with hrev19960 on a Beos partition Here is the trace from a crash:
GNU gdb 6.3 Copyright 2004 Free Software Foundation, Inc. GDB is free software, covered by the GNU General Public License, and you are welcome to change it and/or distribute copies of it under certain conditions. Type "show copying" to see the conditions. There is absolutely no warranty for GDB. Type "show warranty" for details. This GDB was configured as "i586-pc-haiku"...(no debugging symbols found)
Thread 63 caused an exception: Segment violation Reading symbols from /boot/beos/system/lib/libbe.so...(no debugging symbols found)...done. Loaded symbols for /boot/beos/system/lib/libbe.so Reading symbols from /boot/beos/system/lib/libtracker.so...(no debugging symbols found)...done. Loaded symbols for /boot/beos/system/lib/libtracker.so Reading symbols from /boot/beos/system/lib/libroot.so...done. Loaded symbols for /boot/beos/system/lib/libroot.so Reading symbols from /boot/beos/system/lib/libqoca.so...done. Loaded symbols for /boot/beos/system/lib/libqoca.so Reading symbols from /boot/beos/system/lib/libstdc++.hrev4.so...done. Loaded symbols for /boot/beos/system/lib/libstdc++.hrev4.so Reading symbols from /boot/beos/system/lib/libtranslation.so...done. Loaded symbols for /boot/beos/system/lib/libtranslation.so Reading symbols from /boot/beos/system/lib/libtextencoding.so...done. Loaded symbols for /boot/beos/system/lib/libtextencoding.so
[Switching to team /boot/beos/system/Tracker (63) thread Tracker (63)] 0x00365f04 in BWindow::FindView () from /boot/beos/system/lib/libbe.so (gdb)
Attachments (2)
Change History (5)
comment:1 by , 18 years ago
by , 18 years ago
Attachment: | Backtrace for find crashes tracker added |
---|
Back trace for "Find crashing tracker"
by , 17 years ago
Attachment: | ticket1028.patch added |
---|
Bugfix: Window() seems to be null in the error case
comment:3 by , 17 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Thanks for the patch! It's fixed in hrev22102; BWindow is now always checking if BAutolock succeeded, that's why Tracker got away with this bug on BeOS (it now would on Haiku as well).
Can you provide a backtrace ? (write "bt" in the debugger, then press enter)