Fixed bug #1028 from both sides: * FindPanel::SetUpAddRemoveButtons() called Window()->FindView() but did not   check if Window() was NULL. * BWindow now always checks the result of a BAutolock - this is why Tracker   got away with this bug on BeOS; NULL windows cannot be locked...

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22102 a95241bf-73f2-0310-859d-f6bbb57e9c96